2010-07-14	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spintrcritical06/init.c: Switch semaphore obtain timeouts of
	variants.  Cleanup.
	* spintrcritical05/spintrcritical05.scn,
	spintrcritical06/spintrcritical06.scn,
	spintrcritical07/spintrcritical07.scn,
	spintrcritical11/spintrcritical11.scn,
	spintrcritical12/spintrcritical12.scn,
	spintrcritical13/spintrcritical13.scn,
	spintrcritical14/spintrcritical14.scn: Update.

2010-07-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Readd spfatal09 as a malloc initialization
	fatal error.
	* spfatal09/.cvsignore, spfatal09/Makefile.am, spfatal09/spfatal09.doc,
	spfatal09/spfatal09.scn, spfatal09/testcase.h: New files.

2010-07-07	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1603/testing
	* spassoc01/init.c, spassoc01/Makefile.am,
	spassoc01/spassoc01.doc, spassoc01/spassoc01.scn: Added new test.
	* Makefile.am, configure.ac: Added new test spassoc01 for
	rtems_assoc routines.

2010-07-07	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1606/cpukit
	* spfatal_support/init.c: Remove
	INTERNAL_ERROR_INVALID_WORKSPACE_ADDRESS since it is not generated.

2010-07-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* spfatal09/.cvsignore, spfatal09/Makefile.am,
	spfatal09/spfatal09.doc, spfatal09/spfatal09.scn,
	spfatal09/testcase.h: Removed files.
	* Makefile.am, configure.ac: Reflect changes above.
	* spfatal_support/init.c: Print end of test message in case of
	success.  Stop multitasking in the fatal error extension.
	* spfatal03/testcase.h, spfatal07/testcase.h: Use printk() instead of
	puts().
	* spfatal01/spfatal01.scn, spfatal02/spfatal02.scn,
	spfatal03/spfatal03.scn, spfatal04/spfatal04.scn,
	spfatal05/spfatal05.scn, spfatal06/spfatal06.scn,
	spfatal07/spfatal07.scn, spfatal08/spfatal08.scn,
	spfatal10/spfatal10.scn, spfatal11/spfatal11.scn,
	spfatal12/spfatal12.scn, spfatal13/spfatal13.scn,
	spfatal14/spfatal14.scn, spfatal15/spfatal15.scn,